@@ -72,7 +72,7 @@ if {$tcl_platform(platform) == "windows"} {
 package forget app-tkchat	;# Workaround until I can convince people
 ;# that apps are not packages.	:)  DGP
 package provide app-tkchat \
-    [regexp -inline {\d+(?:\.\d+)?} {$Revision: 1.231 $}]
+    [regexp -inline {\d+(?:\.\d+)?} {$Revision: 1.232 $}]
 
 # Maybe exec a user defined preload script at startup (to set Tk options,
 # for example.
@@ -104,7 +104,7 @@ namespace eval ::tkchat {
     variable HOST http://mini.net
 
     variable HEADUrl {http://cvs.sourceforge.net/viewcvs.py/tcllib/tclapps/apps/tkchat/tkchat.tcl?rev=HEAD}
-    variable rcsid   {$Id: tkchat.tcl,v 1.231 2004/11/23 20:03:47 pascalscheffers Exp $}
+    variable rcsid   {$Id: tkchat.tcl,v 1.232 2004/11/23 21:16:49 rmax Exp $}
 
     variable MSGS
     set MSGS(entered) [list \
@@ -3462,11 +3462,12 @@ proc ::tkchat::Debug {cmd args } {
 	}
 	restart {
 	    tkjabber::disconnect
+	    update
 	    saveRC
 	    eval destroy [winfo children .]
 	    eval font delete [font names]
 	    unset ::Options
-	    Init
+	    after idle [linsert $::argv 0 ::tkchat::Init]
 	}
 	retrieve {
 	    Retrieve
@@ -4028,7 +4029,7 @@ proc ::tkchat::Init {args} {
 
     # load RC file if it exists
     if {[info exists ::env(HOME)] && \
-	      [file readable [set rcfile [file join $::env(HOME) .tkchatrc]]]} {
+	    [file readable [set rcfile [file join $::env(HOME) .tkchatrc]]]} {
 	catch {source $rcfile}
     }
 
