@@ -1,3 +1,7 @@
+2004-11-23  Reinhard Max  <max@suse.de>
+
+	* tkchat.tcl (::tkchat::Debug): Some more fixed for reload script.
+
 2004-11-23  Pascal Scheffers  <pascal@scheffers.net>
 
 	* tkchat.tcl: Added /jest for /nolog/me; /memo catcher
